# conantest

profiles/: linux-armv8-Debug.yml  linux-x86_64-Debug.yml
profiles/common/: linux-armv8.yml  linux-x86_64.yml
sum/: CMakeLists.txt  conanfile.py
sum/include/: sum.h
sum/test/: CMakeLists.txt
sum/test/src/: test.cpp
toolchain/: conanfile.py
util/: conanfile.py
